tests/snapshots/integration__success__nested_loop.rl.snap
---
source: tests/integration.rs
expression: output
---
1
2
3
4
exit loop
1
1
2
3
4
exit loop
2
1
2
3
4
exit loop
3
1
2
3
4
exit loop
4
1
2
3
4
exit loop
exit loop
