tests/snapshots/integration__success__return_value.rl.snap
---
source: tests/integration.rs
expression: output
---
testing
pass
testing
pass
pass
<empty>
wow
true
wow
true
