tests/snapshots/integration__success__scope.rl.snap
---
source: tests/integration.rs
expression: output
---
 INFO plrs: CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
        LoadLiteral {
            dest: 3,
            src: 2,
        },
        Add {
            dest: 4,
            lhs: 2,
            rhs: 3,
        },
        LoadLiteral {
            dest: 5,
            src: 2,
        },
        Add {
            dest: 6,
            lhs: 1,
            rhs: 5,
        },
    ],
    global_register_count: 7,
    literals: [
        Integer(
            0,
        ),
        Integer(
            4,
        ),
        Integer(
            1,
        ),
    ],
}
 INFO plrs::vm: executing: LoadLiteral { dest: 1, src: 0 }
 INFO plrs::vm: 1 Integer(0)

 INFO plrs::vm: executing: LoadLiteral { dest: 2, src: 1 }
 INFO plrs::vm: 1 Integer(0)
 INFO plrs::vm: 2 Integer(4)

 INFO plrs::vm: executing: LoadLiteral { dest: 3, src: 2 }
 INFO plrs::vm: 1 Integer(0)
 INFO plrs::vm: 2 Integer(4)
 INFO plrs::vm: 3 Integer(1)

 INFO plrs::vm: executing: Add { dest: 4, lhs: 2, rhs: 3 }
 INFO plrs::vm: 1 Integer(0)
 INFO plrs::vm: 2 Integer(4)
 INFO plrs::vm: 3 Integer(1)
 INFO plrs::vm: 4 Integer(5)

 INFO plrs::vm: executing: LoadLiteral { dest: 5, src: 2 }
 INFO plrs::vm: 1 Integer(0)
 INFO plrs::vm: 2 Integer(4)
 INFO plrs::vm: 3 Integer(1)
 INFO plrs::vm: 4 Integer(5)
 INFO plrs::vm: 5 Integer(1)

 INFO plrs::vm: executing: Add { dest: 6, lhs: 1, rhs: 5 }
 INFO plrs::vm: 1 Integer(0)
 INFO plrs::vm: 2 Integer(4)
 INFO plrs::vm: 3 Integer(1)
 INFO plrs::vm: 4 Integer(5)
 INFO plrs::vm: 5 Integer(1)
 INFO plrs::vm: 6 Integer(1)
