tests/snapshots/integration__success__variable_shadowing.rl.snap
---
source: tests/integration.rs
expression: output
---
 INFO plrs: CompiledProgram {
    functions: [],
    global_code: [
        LoadLiteral {
            dest: 1,
            src: 0,
        },
        LoadLiteral {
            dest: 2,
            src: 1,
        },
        LoadLiteral {
            dest: 3,
            src: 2,
        },
    ],
    global_register_count: 4,
    literals: [
        Integer(
            1,
        ),
        Integer(
            2,
        ),
        Integer(
            3,
        ),
    ],
}
 INFO plrs::vm: executing: LoadLiteral { dest: 1, src: 0 }
 INFO plrs::vm: 1 Integer(1)

 INFO plrs::vm: executing: LoadLiteral { dest: 2, src: 1 }
 INFO plrs::vm: 1 Integer(1)
 INFO plrs::vm: 2 Integer(2)

 INFO plrs::vm: executing: LoadLiteral { dest: 3, src: 2 }
 INFO plrs::vm: 1 Integer(1)
 INFO plrs::vm: 2 Integer(2)
 INFO plrs::vm: 3 Integer(3)
